Added hamburgers for mobile

--- a/wp-content/themes/lighttheme/assets/scss/global/_header.scss
+++ b/wp-content/themes/lighttheme/assets/scss/global/_header.scss
@@ -2,3 +2,17 @@ header {
 	float: left;
 	width: span(12);
 }
+
+.hamburger {
+	display: block;
+	@include breakpoint($bp-charlie) {
+		display: none;
+	}
+}
+
+nav {
+	display: none;
+	@include breakpoint($bp-charlie) {
+		display: block;
+	}
+}
