--- a/wp-content/themes/lighttheme/assets/scss/master.scss
+++ b/wp-content/themes/lighttheme/assets/scss/master.scss
@@ -10,6 +10,10 @@
 @import "base/sanitize";
 @import "base/base";
 
+// elements
+@import "elements/hamburgers/settings";
+@import "elements/hamburgers/hamburgers";
+
 // global
 @import "global/header";
 @import "global/footer";
